# mardi-graphs

./: .gitignore  CMakeLists.txt  README.md
cmake/: Findmardigraphs.cmake  mardigraphsConfig.cmake
headers/MardiGraphs/: Core
headers/src/: directedbase.h  forward_declarations.h  graphbase.h  mdgbase.h  objectdigraph.h
headers/src/core/graphs/: directedbase.h  mdgbase.h  objectdigraph.h
headers/src/operations/: directednodeop.h  nodeopbase.h  nodesetop.h  searchbase.h  undirectednodeop.h
headers/src/util/: adjacencystorage.h  graphtraits.h  nodeoptraits.h  traits.h
include/: bfs.h  dfs.h  digraph.h  edgedfs.h  edgeop.h  edgeset.h  nodeop.h  nodeset.h
notes/: classes.md  todo.md  traits.md
src/: digraph.cpp  edgeop.cpp  edgeset.cpp  nodeop.cpp  nodeset.cpp
src/searches/: bfs.cpp  dfs.cpp  edgedfs.cpp
test/: hallo.cpp  test_adjacencyMatrix.cpp  test_bfs.cpp  test_build.cpp  test_dfs.cpp  test_edgedfs.cpp  test_marked_dfs.cpp  test_nodeop_degree.cpp  test_nodeop_incoming.cpp  test_utils.h
